[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "rl_tictactoe"
authors = [
	{name = "Kranthi Sedamaki", email = "skranthi4444@gmail.com"},
]
description = "A simple implementation of TicTacToe game in Python using Pygame."
readme = "README.md"
requires-python = ">=3.7"
license = {text= "MIT License"}
dependencies = [
	"numpy==1.24.2",
    "pygame==2.1.3",
    "scipy==1.10.1",
    "rich==13.3.4"
]
dynamic = ["version"]
